Fixed font issues on about page

--- a/css/about.css
+++ b/css/about.css
@@ -564,6 +564,7 @@
   #why-us .container .right-section .right-section-container {
     width: 100%;
     font-weight: bold;
+    font-size: 20px;
     height: 70px;
     display: flex;
     flex-direction: column;
