--- a/css/root.css
+++ b/css/root.css
@@ -117,6 +117,91 @@ body {
     padding-top: 31px;
     padding-right: 8px;
   }
+
+  .overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    background-color: rgb(32, 32, 32);
+    overflow-y: hidden;
+    transition: 0.5s;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .overlay-content {
+    position: relative;
+    width: 90%;
+    
+    
+  }
+
+  .overlay-content .overlay-nav {
+    width: 100%;
+    height: 80px;
+    border-bottom: 2px solid white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+
+  .overlay .overlay-content .overlay-nav .navbar-overlay {
+    
+    width: 95%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  .overlay a {
+    text-decoration: none;
+    color: rgb(212, 212, 212);
+    font-weight: bold;
+    font-size: 18px;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .overlay .overlay-links a {
+    color:rgb(199, 199, 199)
+  }
+
+  .overlay a:hover {
+    color:rgb(255, 255, 255)
+  }
+
+
+  .overlay .link {
+    font-size: 40px;
+    padding-left: 0px;
+    margin: 0;
+    padding-top: 30px;
+  }
+  
+  .overlay .closebtn:hover, .overlay .closebtn:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    font-size: 60px;
+    color: white;
+    cursor: pointer; 
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay {overflow-y: auto;}
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
 }
 
 /* -- Ipad Pro -- */
@@ -146,7 +231,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
   }
 
@@ -186,6 +271,91 @@ body {
   .navbar-menu-mobile .link {
     padding-top: 31px;
     padding-right: 8px;
+  }
+
+  .overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    background-color: rgb(32, 32, 32);
+    overflow-y: hidden;
+    transition: 0.5s;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .overlay-content {
+    position: relative;
+    width: 95%;
+    
+    
+  }
+
+  .overlay-content .overlay-nav {
+    width: 100%;
+    height: 80px;
+    border-bottom: 2px solid white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+
+  .overlay .overlay-content .overlay-nav .navbar-overlay {
+    
+    width: 95%;
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+  }
+
+  .overlay a {
+    text-decoration: none;
+    color: rgb(212, 212, 212);
+    font-weight: bold;
+    font-size: 18px;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .overlay .overlay-links a {
+    color:rgb(199, 199, 199)
+  }
+
+  .overlay a:hover {
+    color:rgb(255, 255, 255)
+  }
+
+
+  .overlay .link {
+    font-size: 60px;
+    padding-left: 0px;
+    margin: 0;
+    padding-top: 30px;
+  }
+  
+  .overlay .closebtn:hover, .overlay .closebtn:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    font-size: 60px;
+    color: white;
+    cursor: pointer; 
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay {overflow-y: auto;}
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
   }
 }
 
@@ -289,6 +459,12 @@ body {
   .navbar-menu-mobile {
     display: none;
   }
+
+  .overlay {
+    display: none;
+  }
+  
+  
 }
 
 /* -- Regular Desktop -- */
