--- a/css/root.css
+++ b/css/root.css
@@ -330,12 +330,54 @@ body {
     color:rgb(255, 255, 255)
   }
 
+  .overlay-content .overlay-links h1 {
+    margin: 0;
+    overflow: hidden;
+    line-height: 1;
+  }
+
 
   .overlay .link {
     font-size: 60px;
     padding-left: 0px;
     margin: 0;
     padding-top: 30px;
+    display: block;
+    
+  }
+
+  .link-animation1 {
+    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+  }
+
+  .link-animation2 {
+    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+  }
+
+  .link-animation3 {
+    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+  }
+
+  .link-animation4 {
+    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+  }
+
+  @keyframes reveal {
+    0% {
+      transform: translate(0,100%);
+    }
+    100% {
+      transform: translate(0,0);
+    }
+  }
+
+  @keyframes hide {
+    0% {
+      transform: translate(0,0);
+    }
+    100% {
+      transform: translate(0,100%);
+    }
   }
   
   .overlay .closebtn:hover, .overlay .closebtn:focus {
