--- a/css/root.css
+++ b/css/root.css
@@ -319,11 +319,11 @@ body {
     font-weight: bold;
     font-size: 18px;
     display: block;
-    transition: 0.3s;
   }
 
   .overlay .overlay-links a {
     color:rgb(199, 199, 199)
+    
   }
 
   .overlay a:hover {
@@ -343,42 +343,19 @@ body {
     margin: 0;
     padding-top: 30px;
     display: block;
-    
+    transform: translate(0,100%);
+    transition-duration: 1.25s;
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1)
   }
 
   .link-animation1 {
-    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.25s;
   }
 
   .link-animation2 {
-    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
+    animation: hide cubic-bezier(0.77, 0, 0.175, 1) 1.25s;
   }
 
-  .link-animation3 {
-    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
-  }
-
-  .link-animation4 {
-    animation: reveal cubic-bezier(0.77, 0, 0.175, 1) 1.5s;
-  }
-
-  @keyframes reveal {
-    0% {
-      transform: translate(0,100%);
-    }
-    100% {
-      transform: translate(0,0);
-    }
-  }
-
-  @keyframes hide {
-    0% {
-      transform: translate(0,0);
-    }
-    100% {
-      transform: translate(0,100%);
-    }
-  }
   
   .overlay .closebtn:hover, .overlay .closebtn:focus {
     color: #f1f1f1;
