--- a/css/local.css
+++ b/css/local.css
@@ -50,7 +50,7 @@
   }
 
   #hero .left-section-mobile .hero-header {
-    font-size: 8.5vw;
+    font-size: 9.5vw;
     /*font-size: 35px;*/
     line-height: 95%;
     font-weight: bold;
@@ -59,6 +59,7 @@
   #hero .left-section-mobile p {
     font-size: 16px;
     line-height: 125%;
+    width: 90%;
   }
 
   #hero .left-section {
@@ -231,6 +232,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-top: 20px;
   }
 
   #services .container {
@@ -250,8 +252,7 @@
   }
 
   #services .left-section .services-header {
-    font-size: 26px;
-    line-height: 95%;
+    font-size: 8vw;
     font-weight: bold;
   }
 
@@ -265,8 +266,9 @@
     display: flex; /* establish flex container */
     flex-direction: column; /* make main axis vertical */
     justify-content: space-between; /* center items vertically, in this case */
-    font-size: 14px;
-    line-height: 150%;
+    font-size: 16px;
+    line-height: 125%;
+    padding-bottom: 20px;
   }
 
   #services .right-section p {
@@ -520,6 +522,7 @@
     font-size: 20px;
     background-color: #f1f1f1;
     max-width: 100%;
+    
     /*overflow-x: hidden;*/
   }
 
@@ -528,6 +531,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    
   }
 
   #portfolio .container {
@@ -545,7 +549,7 @@
     background-color: rgb(208, 255, 208);
     */
     border-bottom: 2px solid rgb(214, 214, 214);
-    padding-bottom: 20px;
+    padding-bottom: 30px;
   }
 
   #portfolio .middle-section {
@@ -555,7 +559,8 @@
     background-color: rgb(195, 255, 195);
     */
     border-bottom: 2px solid rgb(214, 214, 214);
-    padding-bottom: 20px;
+    padding-bottom: 30px;
+    padding-top: 20px;
   }
 
   #portfolio .right-section {
@@ -565,23 +570,29 @@
     background-color: rgb(181, 253, 181);
     */
 
-    padding-bottom: 20px;
+    padding-bottom: 30px;
+    padding-top: 20px;
   }
 
   #portfolio .title {
     padding-bottom: 20px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 6vw;
+    color: rgb(32, 32, 32);
+    
   }
 
   #portfolio .description {
     padding-bottom: 20px;
-    font-size: 14px;
+    font-size: 16px;
+    line-height: 125%;
+    color: rgb(32, 32, 32);
+    
   }
 
   #portfolio .subtitles {
     font-size: 12px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
   }
 
   #portfolio .subtitles span {
@@ -818,8 +829,10 @@
   }
 
   #pricing .left-section .description {
-    width: 90%;
-    font-size: 14px;
+    width: 100%;
+    font-size: 16px;
+    line-height: 125%;   
+  
   }
 
   #pricing .right-section {
@@ -832,6 +845,7 @@
     flex-direction: row; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
     flex-wrap: wrap;
+    padding-top: 20px;
   }
 
   #pricing .pricing-box-container {
@@ -842,10 +856,11 @@
   }
 
   #pricing .pricing-box-container img {
-    padding-right: 5px;
+    padding-right: 10px;
     filter: invert(22%) sepia(76%) saturate(4390%) hue-rotate(225deg)
       brightness(87%) contrast(74%);
-    width: 8%;
+    width: 12%;
+    margin-top: -40px;
   }
 
   #pricing .pricing-box {
@@ -861,7 +876,7 @@
   }
 
   #pricing .title {
-    font-size: 26px;
+    font-size: 8vw;
     line-height: 95%;
     font-weight: bold;
     padding-bottom: 20px;
@@ -880,11 +895,13 @@
 
   #pricing .pricing-box .pricing-title {
     font-weight: bold;
-    font-size: 14px;
+    font-size: 4.5vw;
+    padding-bottom: 10px;
   }
 
   #pricing .pricing-box p {
-    font-size: 12px;
+    font-size: 16px;
+    line-height: 125%;
     width: 90%;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -1201,7 +1218,7 @@
   }
 
   #blog .blog-element .blog-header {
-    font-size: 4vw;
+    font-size: 4.5vw;
     font-weight: bold;
     width: 70%;
   }
@@ -1221,6 +1238,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
   }
 
   #blog .blog-element .blog-link img {
@@ -1302,6 +1320,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: initial;
   }
 
   #blog .blog-element .blog-link img {
@@ -1387,6 +1406,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: initial;
   }
 
   #blog .blog-element .blog-link img {
